--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "@teachiq/eslint-config",
   "version": "0.1.0",
+  "publishConfig": {
+    "access": "restricted",
+    "registry": "https://npm.pkg.github.com/"
+  },
   "description": "The standard Teachiq linting config",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Teachiq/eslint-config"
+  },
+  "bugs": {
+    "url": "https://github.com/Teachiq/eslint-config/issues"
+  },
+  "homepage": "https://github.com/Teachiq/froala-editor#readme",
   "main": "index.js",
   "scripts": {
     "version": "echo $npm_package_version",
