--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@teachiq/eslint-config",
   "version": "1.1.0",
   "publishConfig": {
+    "access": "public",
     "registry": "https://npm.pkg.github.com/"
   },
   "description": "The standard Teachiq linting config",
