Set registry back to github

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@teachiq/eslint-config",
   "version": "1.1.4",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": " https://npm.pkg.github.com"
   },
   "description": "The standard Teachiq linting config",
   "repository": {
