--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "version": "echo $npm_package_version",
     "postversion": "npm publish",
-    "postinstall": "npx install-peerdeps -D @teachiq/eslint-config"
+    "postinstall": "node ./install.js"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.0",
