Simplify install script

--- a/package.json
+++ b/package.json
@@ -61,5 +61,8 @@
     "formatting"
   ],
   "author": "Teachiq",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "spawn-npm-install": "^1.2.0"
+  }
 }
