--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@teachiq/eslint-config",
-  "version": "1.3.0",
+  "version": "1.4.0-beta.3",
   "publishConfig": {
     "access": "public",
     "registry": " https://npm.pkg.github.com"
   },
+  "bin": {
+    "teachiq-config-install": "./install.js"
+  } ,
   "description": "The standard Teachiq linting config",
   "repository": {
     "type": "git",
@@ -17,8 +20,7 @@
   "main": "index.js",
   "scripts": {
     "version": "echo $npm_package_version",
-    "postversion": "npm publish",
-    "postinstall": "node ./install.js"
+    "postversion": "npm publish"
   },
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.0",
