--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@teachiq/eslint-config",
-  "version": "1.4.0-beta.3",
+  "version": "1.4.0",
   "publishConfig": {
     "access": "public",
     "registry": " https://npm.pkg.github.com"
   },
   "bin": {
     "teachiq-config-install": "./install.js"
-  } ,
+  },
   "description": "The standard Teachiq linting config",
   "repository": {
     "type": "git",
