--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "@typescript-eslint/parser": "^3.9.0",
     "@vue/eslint-config-standard": "^5.1.0",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "eslint": ">= 7",
+    "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.18.0",
+    "eslint-plugin-vue": "^7.19.0",
+    "eslint-plugin-file-progress": "^1.1.1",
     "typescript": "~3.7.5"
   },
   "devDependencies": {
@@ -41,12 +42,13 @@
     "@typescript-eslint/parser": "^3.10.1",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^5.1.0",
-    "eslint": "^7.7.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^7.19.0",
+    "eslint-plugin-file-progress": "^1.1.1",
     "typescript": "^4.0.2"
   },
   "keywords": [
