--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
     "postversion": "npm publish"
   },
   "peerDependencies": {
-    "eslint": "^7.32.0"
+    "eslint": "^7.8.0",
+    "@rushstack/eslint-patch": "^1.0.7"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^5.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^7.8.0",
     "eslint-plugin-file-progress": "^1.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^7.19.0",
-    "@rushstack/eslint-patch": "1.0.7"
+    "eslint-plugin-vue": "^7.19.0"
   },
   "keywords": [
     "eslint",
@@ -45,5 +45,4 @@
   ],
   "author": "Teachiq",
   "license": "ISC"
- 
 }
