--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teachiq/eslint-config",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-beta.2",
   "publishConfig": {
     "access": "public",
     "registry": " https://npm.pkg.github.com"
@@ -20,15 +20,15 @@
     "postversion": "npm publish"
   },
   "peerDependencies": {
-    "eslint": "^7.8.0",
-    "@rushstack/eslint-patch": "^1.0.7"
+    "@rushstack/eslint-patch": "1.0.7",
+    "eslint": "7.8.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^5.1.0",
-    "eslint": "^7.8.0",
+    "eslint": "7.8.0",
     "eslint-plugin-file-progress": "^1.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
