--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "postversion": "npm publish"
   },
   "peerDependencies": {
-    "@rushstack/eslint-patch": "1.0.7",
-    "eslint": "7.8.0"
+    "@rushstack/eslint-patch": "~1.0.7",
+    "eslint": "~7.8.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.10.1",
