--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teachiq/eslint-config",
-  "version": "2.0.1-beta.3",
+  "version": "2.0.1-beta.4",
   "publishConfig": {
     "access": "public",
     "registry": " https://npm.pkg.github.com"
@@ -20,6 +20,8 @@
     "postversion": "npm publish"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^7.0.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-file-progress": "^1.2.0",
@@ -39,6 +41,10 @@
   "author": "Teachiq",
   "license": "ISC",
   "eslintConfig": {
-    "extends": "./index.js"
+    "extends": [
+      "./profile/vue.js",
+      "./profile/vue3.js",
+      "./profile/typescript.js"
+    ]
   }
 }
