--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
+    "@vue/eslint-config-standard": "^6.1.0",
+    "@vue/eslint-config-typescript": "^8.0.0",
     "eslint": "^7.0.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-file-progress": "^1.2.0",
@@ -29,7 +31,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^7.0.0"
   },
   "keywords": [
     "eslint",
@@ -44,6 +46,7 @@
     "extends": [
       "./profile/vue.js",
       "./profile/vue3.js",
+      "./profile/vueTs.js",
       "./profile/typescript.js"
     ]
   }
