--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teachiq/eslint-config",
-  "version": "3.0.0",
+  "version": "3.0.1-beta.2",
   "publishConfig": {
     "access": "public",
     "registry": " https://npm.pkg.github.com"
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^5.3.1",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/eslint-config-typescript": "^8.0.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^7.0.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-file-progress": "^1.2.0",
