--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teachiq/eslint-config",
-  "version": "3.0.1-beta.2",
+  "version": "3.0.1",
   "publishConfig": {
     "access": "public",
     "registry": " https://npm.pkg.github.com"
