--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "^8.0.0"
+    "eslint-plugin-vue": "^8.0.0",
+    "eslint-plugin-compat": "^4.0.2"
   },
   "keywords": [
     "eslint",
