--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "The standard Teachiq linting config",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Teachiq/eslint-config"
+    "url": "git+https://github.com/Teachiq/eslint-config.git"
   },
   "bugs": {
     "url": "https://github.com/Teachiq/eslint-config/issues"
