--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teachiq/eslint-config",
-  "version": "3.3.0-beta.1",
+  "version": "3.3.0",
   "publishConfig": {
     "access": "public",
     "registry": " https://npm.pkg.github.com"
