Try with mjs again

--- a/package.json
+++ b/package.json
@@ -48,5 +48,10 @@
       "./vue-typescript.js",
       "./vue3-typescript.js"
     ]
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.12.0",
+    "globals": "^15.11.0"
   }
 }
